src/objects/Object_Merge_Field__c.object
<CustomObject>
    <description>Represents a field to be merged.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, this field will be included in processing.</description>
        <inlineHelpText>If checked, this field will be included in processing.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keep_Most_Recent_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the most recent value of this field according to Field History Tracking will be kept.</description>
        <inlineHelpText>If checked, the most recent value of this field according to Field History Tracking will be kept.</inlineHelpText>
        <label>Keep Most Recent Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keep_Null_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, null field values will be kept if more recent than non-null values when the &quot;Keep Most Recent Value&quot; checkbox is checked or if on the master record if not checked.</description>
        <inlineHelpText>If checked, null field values will be kept if more recent than non-null values when the &quot;Keep Most Recent Value&quot; checkbox is checked or if on the master record if not checked.</inlineHelpText>
        <label>Keep Null Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Merge_Handler__c</fullName>
        <description>Handler for this field.</description>
        <inlineHelpText>Handler for this field.</inlineHelpText>
        <label>Object Merge Handler</label>
        <referenceTo>Object_Merge_Handler__c</referenceTo>
        <relationshipLabel>Object Merge Fields</relationshipLabel>
        <relationshipName>Object_Merge_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Treat_False_as_Null__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the value of unchecked checkbox fields will be treated as null during the merge process. Unchecked checkbox fields on master records will be overwritten by checked checkbox fields on victim records.</description>
        <inlineHelpText>When checked, the value of unchecked checkbox fields will be treated as null during the merge process. Unchecked checkbox fields on master records will be overwritten by checked checkbox fields on victim records.</inlineHelpText>
        <label>Treat False as Null</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_for_Matching__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this field will be used to match to duplicate related records on the master record.</description>
        <inlineHelpText>If checked, this field will be used to match to duplicate related records on the master record.</inlineHelpText>
        <label>Use for Matching</label>
        <type>Checkbox</type>
    </fields>
    <label>Object Merge Field</label>
    <nameField>
        <label>Field API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Merge Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>